# eletrosim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  main.cpp
